Updated access page

--- a/vendor-app/src/main/webapp/adidas/placeorder.html
+++ b/vendor-app/src/main/webapp/adidas/placeorder.html
@@ -114,7 +114,7 @@
 					</div>
 					<div id="URNDetails">
 						<label>Enter Payment Token Reference Number : <input id="urn" type="text"
-							name="urn"></input></label>
+							name="urn" disabled></input></label>
 					</div>
 				</h3>
 				<div class="btn_form">
